# WebAssemblyStudy

./: README.md
learn/: readme.md
learn/handsonGameDevelopmentwithWebAssembly/: readme.md
learn/theartofwebassembly/chapter1/: AddInt.js  readme.md
learn/theartofwebassembly/chapter2/: readme.md
learn/wasi_js/: readme.md
learn/wasi_js/hello/: readme.md
learn/wasm_hello_world_c/: .gitignore  readme.md
learn/wasm_hello_world_c_CMake_dll/: CMakeLists.txt  readme.md
learn/wasm_hello_world_c_CMake_dll/src/: CMakeLists.txt
learn/wasm_hello_world_c_CMake_dlopen/: CMakeLists.txt  readme.md  run_dll.sh  run_dload.sh  run_test.sh
learn/wasm_hello_world_c_CMake_dlopen/src/: CMakeLists.txt  hellomake.c
learn/wasm_hello_world_c_CMake_dlopen/src/lib/: CMakeLists.txt  hellofunc.c
learn/wasm_hello_world_c_CMake_static/: readme.md
learn/wasm_hello_world_c_CMake_static/src/: CMakeLists.txt
learn/wasm_hello_world_c_CMake_static/src/lib/: CMakeLists.txt
learn/wasm_hello_world_c_dlopen/: readme.md
learn/wasm_hello_world_c_dlopen/src/: hellomake.c
learn/wasm_hello_world_c_makefile/: .gitignore  Makefile  readme.md
learn/wasm_hello_world_c_makefile_Dynamic_Linking/: Makefile  package-lock.json  readme.md
learn/wasm_hello_world_c_multiple_sources/: .gitignore  readme.md
learn/wasm_hello_world_c_multiple_sources/html_template/: shell_minimal.html
learn/wasm_hello_world_c_shell_minimal/: .gitignore  hello.c  readme.md
learn/wasm_hello_world_cpp_egl/: .gitignore  readme.md  run_test_wasm.sh
learn/wasm_hello_world_cpp_egl/src/: example.c
learn/wasm_hello_world_cpp_multiple_webgl/: .gitignore  index.html  index.js  nodewebgl.js  readme.md  wasmglfw.html  wasmglfw.js  wasmglfw.wasm  wasmwebgl.js
learn/wasm_hello_world_cpp_multiple_webgl/src/: main.c  mainglfw.c
learn/wasm_hello_world_cpp_sdl2/: readme.md  run_test_native.sh  run_test_wasm.sh
learn/wasm_hello_world_cpp_svgpp/: readme.md
learn/wasm_hello_world_cpp_svgpp/src/: example.cpp
learn/wasm_hello_world_cpp_webgl/: index.html  index.js  index.wasm  nodewebgl.js  readme.md  wasmwebgl.js
learn/wasm_hello_world_cpp_webgl/src/: main.c
learn/wasm_hello_world_node_canvas/: readme.md  threejs.js
learn/wasm_hello_world_node_webgl_canvas/: .gitignore  main.js  package-lock.json  package.json  readme.md
learn/wasm_hello_world_node_webgl_canvas/examples/: cube.js  main.js  mytest.js
learn/wasmtime/: .gitignore  readme.md
wasi/: readme.md
wasi/wasi_hello_world/: build.sh  hello.c  readme.md
wasi/wasmtime/hello/: hello.wasm
